output/method_names/jacksonDatabind_tests/com/fasterxml/jackson/failing/TestTypeAliases.java
public void testResolution743() throws Exception
